[tool.poetry]
name = "rabbitmq"
version = "0.0.1"
description = ""
authors = ["s.kravtsov <s.kravtsov@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
mongoengine = "^0.27.0"
Faker = "^21.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
